crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_singles_over_doubles_would_be_triple_quotes.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q000 Double quotes found but single quotes preferred
 --> doubles_would_be_triple_quotes.py:1:5
  |
1 | s = ""'Start with empty string' ' and lint docstring safely'
  |     ^^
2 | s = "Do not"' start with empty string' ' and lint docstring safely'
help: Replace double quotes with single quotes

Q000 [*] Double quotes found but single quotes preferred
 --> doubles_would_be_triple_quotes.py:2:5
1 | s = ""'Start with empty string' ' and lint docstring safely'
2 | s = "Do not"' start with empty string' ' and lint docstring safely'
  |     ^^^^^^^^
help: Replace double quotes with single quotes
  |
1 | s = ""'Start with empty string' ' and lint docstring safely'
  - s = "Do not"' start with empty string' ' and lint docstring safely'
2 + s = 'Do not'' start with empty string' ' and lint docstring safely'
  |
